# endterm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/common/utils/: helpers.py  sms_api.py
app/posts/: admin.py  models.py  serializers.py  urls.py  views.py
app/sso/: admin.py  apps.py  models.py
app/sso/migrations/: 0001_initial.py
config/: settings.py  urls.py
devops/gunicorn/: start.sh
devops/nginx/: onekid.conf
devops/supervisor/: onekid.conf
docker/django/: Dockerfile
docker/postgres/: Dockerfile
